Fix color contrast accessibility

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,10 +21,10 @@ a {
   --gray-light: #EBEBEB;
   --gray--dark: #787D85;
   --white: white;
-  --primary: #7653FC;
+  --primary: #724FFC;
   --primary-hover: #5B32FB;
   --red: #FC836D;
-  --green: #1DC37E;
+  --green: #127a4f;
   --green-light: #C8F8E4;
   --font-family: "Noto Sans Display", sans-serif;
   --background: #F5F6F8;
